backend/server.log
/home/saleel/botmarket/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/index.ts(1,8): error TS1295: ECMAScript imports and exports cannot be written in a CommonJS file under 'verbatimModuleSyntax'. Adjust the 'type' field in the nearest 'package.json' to make this file an ECMAScript module, or adjust your 'verbatimModuleSyntax', 'module', and 'moduleResolution' settings in TypeScript.
src/index.ts(2,8): error TS1295: ECMAScript imports and exports cannot be written in a CommonJS file under 'verbatimModuleSyntax'. Adjust the 'type' field in the nearest 'package.json' to make this file an ECMAScript module, or adjust your 'verbatimModuleSyntax', 'module', and 'moduleResolution' settings in TypeScript.
src/index.ts(17,12): error TS2769: No overload matches this call.
  Overload 1 of 6, '(port: number, hostname: string, backlog: number, callback?: ((error?: Error | undefined) => void) | undefined): Server<typeof IncomingMessage, typeof ServerResponse>', gave the following error.
    Argument of type 'string | 3001' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.
  Overload 2 of 6, '(port: number, hostname: string, callback?: ((error?: Error | undefined) => void) | undefined): Server<typeof IncomingMessage, typeof ServerResponse>', gave the following error.
    Argument of type 'string | 3001' is not assignable to parameter of type 'number'.
      Type 'string' is not assignable to type 'number'.

    at createTSError (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Object.require.extensions.<computed> [as .ts] (/home/saleel/botmarket/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12) {
  diagnosticCodes: [ 1295, 1295, 2769 ]
}
